--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                 // This is where you would send to your n8n webhook
                 // Replace 'YOUR_N8N_WEBHOOK_URL' with your actual n8n webhook URL
                 
-                const response = await fetch('https://n8n.srv859967.hstgr.cloud/webhook-test/upload-documents', {
+                const response = await fetch('YOUR_N8N_WEBHOOK_URL', {
                     method: 'POST',
                     body: formData
                 });
@@ -845,6 +845,7 @@
         document.addEventListener('DOMContentLoaded', initializeApp);
     </script>
 </body>
+</html>
 </html>
 </body>
 </html> 
